chore<ver2>:initialBuild
 - 기본 맵탐색과 레벨업, 인터페이스 만듬

- 메모리 누수 찾아서 막아야함
- const와 &를 붙일 수 있는 곳에 붙여야함
- 각 클래스간의 의존성을 낮춰야함
- 함수의 역할을 최대한 나눠야함

--- a/TEXT_RPG/TEXT_RPG_Master_ver2/TEXT_RPG_Master_ver2.vcxproj.filters
+++ b/TEXT_RPG/TEXT_RPG_Master_ver2/TEXT_RPG_Master_ver2.vcxproj.filters
@@ -22,11 +22,11 @@
     <Filter Include="CMainGame">
       <UniqueIdentifier>{611fdd3e-36bd-4dc0-b244-015412ceb285}</UniqueIdentifier>
     </Filter>
-    <Filter Include="CVillage">
-      <UniqueIdentifier>{cd9089f5-5d91-4a7c-b98c-ad753c9d33ee}</UniqueIdentifier>
-    </Filter>
     <Filter Include="CField">
       <UniqueIdentifier>{e0f74b13-b2fe-4058-8d77-3d418df50bc3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="CTile">
+      <UniqueIdentifier>{8ca455be-4407-4f7c-b2c4-b9fc1276c111}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -45,11 +45,11 @@
     <ClInclude Include="CField.h">
       <Filter>CField</Filter>
     </ClInclude>
-    <ClInclude Include="CVillage.h">
-      <Filter>CVillage</Filter>
-    </ClInclude>
     <ClInclude Include="CMainGame.h">
       <Filter>CMainGame</Filter>
+    </ClInclude>
+    <ClInclude Include="CTile.h">
+      <Filter>CTile</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -68,11 +68,11 @@
     <ClCompile Include="CField.cpp">
       <Filter>CField</Filter>
     </ClCompile>
-    <ClCompile Include="CVillage.cpp">
-      <Filter>CVillage</Filter>
-    </ClCompile>
     <ClCompile Include="CMainGame.cpp">
       <Filter>CMainGame</Filter>
+    </ClCompile>
+    <ClCompile Include="CTile.cpp">
+      <Filter>CTile</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
