--- a/TEXT_RPG/TEXT_RPG_Master_ver2/TEXT_RPG_Master_ver2.vcxproj
+++ b/TEXT_RPG/TEXT_RPG_Master_ver2/TEXT_RPG_Master_ver2.vcxproj
@@ -139,7 +139,7 @@
     <ClInclude Include="CMainGame.h" />
     <ClInclude Include="CMonster.h" />
     <ClInclude Include="CPlayer.h" />
-    <ClInclude Include="CVillage.h" />
+    <ClInclude Include="CTile.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
@@ -148,7 +148,7 @@
     <ClCompile Include="CMainGame.cpp" />
     <ClCompile Include="CMonster.cpp" />
     <ClCompile Include="CPlayer.cpp" />
-    <ClCompile Include="CVillage.cpp" />
+    <ClCompile Include="CTile.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
